# django_validation

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
django_validation/: custom_validations.py
src/custom_django_validation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/validation/: model_validations.py
