[build-system]
requires = ["setuptools>=61.0", 'Django', 'django-role-permissions']
build-backend = "setuptools.build_meta"

[project]
name = "django_validation"
version = "0.0.3"
authors = [
    { name = "Shaghayegh Ghorbanpoor", email = "ghorbanpoor.shaghayegh@gmail.com" },
]
description = "validation Python package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
#[pypi]
#repository = "https://pypi.org/manage/project/django-validation"
[project.urls]
"Homepage" = "https://github.com/shaqayegh-gh/django_validation"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"